Update ChannelApiController.java